Fix popup close. Fix landscape on mobile

--- a/themes/dissent/static/css/mobile.css
+++ b/themes/dissent/static/css/mobile.css
@@ -167,7 +167,10 @@ a.button  {line-height:4rem;}
 	padding:2vh 2vw 2vh 2vw;
 }
 .popup img.speaker-img { width:25vw; max-width:40vh; max-height:unset; }
-.popup .bio {	position:absolute ;bottom:0.5em;left: 0.5em;right:0.5em;top:38vw;overflow-y: auto; font-size:1em}
+.popup .bio {	position:absolute ;bottom:0.5em;left: 1.2em;right:0.5em;top:38vw;overflow-y: auto; font-size:1em}
+@media screen and (orientation:landscape) {
+   .popup .bio {	top:27vw; font-size: 0.9em;}
+}
 .popup .featured-description .name {font-size:1em;}
 
 
